--- a/index.html
+++ b/index.html
@@ -68,13 +68,50 @@
 
     <div class="heroparallax">
 
-        <div class="hero1"><img src="images/hp_layer1.jpg"></div>
-        <div class="hero2"><img src="images/hp_layer2.png"></div>
-        <div class="hero3"><img src="images/hp_layer3.png"></div>
-        <div class="hero4"><img src="images/logo.png" width="230px"></div>
+      <div class="hero1"><img src="images/hp_layer1.jpg"></div>
+      <div class="hero2"><img src="images/hp_layer2.png"></div>
+      <div class="hero3"><img src="images/hp_layer3.png"></div>
+      <div class="hero4"><img src="images/logo.png" width="230px"></div>
+
+    </div>
 
 
+    <div class="trailer-buy">
 
+      <div class="trailer"><a href="https://www.youtube.com/">WATCH TRAILER</a></div>
+      <div class="buynow">BUY NOW</div>
+    
+    </div>
+
+    <div class="platform">
+
+      <a href="steam" target="_blank">
+        <img src="images/steam.png">
+      </a>
+
+      <a class="ps4" href="ps4" target="_blank">
+        <img src="images/ps4.png">
+      </a>
+
+      <a href="xbox" target="_blank">
+         <img src="images/xbox.png">
+      </a>
+
+    </div>
+
+    <div class="awards">
+
+      <ul>
+        <li><img src="images/awards/award1.png"></li>
+        <li><img src="images/awards/award2.png"></li>
+        <li><img src="images/awards/award3.png"></li>
+        <li><img src="images/awards/award4.png"></li>
+        <li><img src="images/awards/award5.png"></li>
+        <li><img src="images/awards/award6.png"></li>
+        <li><img class="sredina" src="images/awards/award7.png"></li>
+        <li><img src="images/awards/award8.png"></li>
+        <li><img src="images/awards/award9.png"></li>
+      </ul>
 
 
 
@@ -87,7 +124,13 @@
 
 
 
+
+
+
   </div> <!-- main -->
+
+ 
+
 
 
 
